src/objects/frInboundSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether Salesforce supporter updates are sent back to Funraise.</description>
        <inlineHelpText>Controls whether Salesforce supporter updates are sent back to Funraise.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Named_Credential__c</fullName>
        <description>The API name of the Named Credential that points at the Funraise Platform API.</description>
        <inlineHelpText>The API name of the Named Credential that points at the Funraise Platform API.</inlineHelpText>
        <label>Named Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_UUID__c</fullName>
        <description>The Funraise organization UUID used by the inbound Platform endpoint.</description>
        <inlineHelpText>The Funraise organization UUID used by the inbound Platform endpoint.</inlineHelpText>
        <label>Organization UUID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret__c</fullName>
        <description>The shared secret Platform requires on inbound Salesforce sync requests.</description>
        <inlineHelpText>The shared secret Platform requires on inbound Salesforce sync requests.</inlineHelpText>
        <label>Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Funraise Inbound Sync Settings</label>
</CustomObject>